[570884] extract struct was visible for only event pins selected
Bug: https://bugs.eclipse.org/bugs/show_bug.cgi?id=570884
Change-Id: I54f7c7be3e8548309d0db04b8db7c76889260115
Signed-off-by: Bianca Wiesmayr <bianca.wiesmayr@jku.at>