@@ -17,6 +17,7 @@
  *******************************************************************************/
 package org.eclipse.fordiac.ide.application.handlers;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -30,6 +31,7 @@ import org.eclipse.fordiac.ide.application.editparts.InterfaceEditPartForFBNetwo
 import org.eclipse.fordiac.ide.application.wizards.SaveAsStructWizard;
 import org.eclipse.fordiac.ide.model.commands.create.CreateStructFromInterfaceElementsCommand;
 import org.eclipse.fordiac.ide.model.data.DataType;
+import org.eclipse.fordiac.ide.model.libraryElement.AdapterDeclaration;
 import org.eclipse.fordiac.ide.model.libraryElement.FBNetworkElement;
 import org.eclipse.fordiac.ide.model.libraryElement.VarDeclaration;
 import org.eclipse.fordiac.ide.model.typelibrary.TypeLibrary;
@@ -37,9 +39,12 @@ import org.eclipse.gef.EditPart;
 import org.eclipse.gef.commands.Command;
 import org.eclipse.gef.commands.CommandStack;
 import org.eclipse.jface.dialogs.MessageDialog;
+import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.IStructuredSelection;
+import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.wizard.WizardDialog;
 import org.eclipse.ui.IEditorPart;
+import org.eclipse.ui.ISources;
 import org.eclipse.ui.handlers.HandlerUtil;
 
 public class ConvertToStructHandler extends AbstractHandler {
@@ -77,6 +82,13 @@ public class ConvertToStructHandler extends AbstractHandler {
 		return Status.OK_STATUS;
 	}
 
+	@Override
+	public void setEnabled(Object evaluationContext) {
+		final ISelection sel = (ISelection) HandlerUtil.getVariable(evaluationContext,
+				ISources.ACTIVE_CURRENT_SELECTION_NAME);
+		setBaseEnabled(!collectSelectedVarDecls(sel).isEmpty());
+	}
+
 	private void invokeSaveWizard(final List<VarDeclaration> varDecls, final IEditorPart editor) {
 		wizard = new SaveAsStructWizard(varDecls, project, Messages.ConvertToStructHandler_Title);
 		final WizardDialog dialog = new WizardDialog(editor.getSite().getShell(), wizard);
@@ -90,10 +102,14 @@ public class ConvertToStructHandler extends AbstractHandler {
 	}
 
 	@SuppressWarnings("unchecked")
-	private static List<VarDeclaration> collectSelectedVarDecls(final IStructuredSelection sel) {
-		return (List<VarDeclaration>) sel.toList().stream().filter(ep -> ep instanceof InterfaceEditPartForFBNetwork)
-				.map(ep -> ((EditPart) ep).getModel()).filter(el -> el instanceof VarDeclaration)
-				.collect(Collectors.toList());
+	private static List<VarDeclaration> collectSelectedVarDecls(final ISelection sel) {
+		if (sel instanceof StructuredSelection) {
+			return (List<VarDeclaration>) ((IStructuredSelection) sel).toList().stream()
+					.filter(ep -> ep instanceof EditPart).map(ep -> ((EditPart) ep).getModel())
+					.filter(el -> (el instanceof VarDeclaration) && !(el instanceof AdapterDeclaration))
+					.collect(Collectors.toList());
+		}
+		return Collections.emptyList();
 	}
 
 	private static FBNetworkElement getNetworkElementFromSelectedPins(final IStructuredSelection selectedPins) {
